# rs_simple_webworker

./: Cargo.toml  LICENSE_MIT  README.md  index.html
src/: lib.rs
