[package]
name = "rs_simple_webworker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

wasm-bindgen = "0.2"

wasm-bindgen-futures = "0.4"

js-sys = "0.3"

web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "WorkerGlobalScope",
    "Worker",
    "Blob",
    "Url",
    "MessageEvent",
    "console"
] }

async-trait = "0.1"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
