[package]
name = "rs_simple_webworker"
version = "0.1.1"
edition = "2021"

authors = ["YuriyRum<rumyua@gmail.com>"]
description = "Makes it easier to use a WebWorker"
readme = "README.md"
homepage="https://github.com/YuriyRum/rs_simple_webworker"
repository = "https://github.com/YuriyRum/rs_simple_webworker"
license = "MIT"
keywords = ["web", "wasm", "WebWorker"]
exclude = ["/target", ".*"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

wasm-bindgen-futures = "0.4"

js-sys = "0.3"

web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "WorkerGlobalScope",
    "Worker",
    "Blob",
    "Url",
    "MessageEvent",
    "console"
] }

async-trait = "0.1"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
